<resources>
    <string name="app_name">Agenda</string>
    <string name="Nome">Nome</string>
    <string name="Endereco">Endereco</string>
    <string name="Telefone">Telefone</string>
    <string name="Email">Email</string>
    <string name="OK">OK</string>
    <string name="Numero">Nº</string>
    <string name="Bairro">Bairro</string>
    <string name="codigo">+DDI</string>

    <string-array name="codigo">
        <item>	DDI	</item>
        <item>	+00	</item>
        <item>	+1	</item>
        <item>	+7	</item>
        <item>	+20	</item>
        <item>	+27	</item>
        <item>	+30	</item>
        <item>	+31	</item>
        <item>	+32	</item>
        <item>	+33	</item>
        <item>	+34	</item>
        <item>	+36	</item>
        <item>	+39	</item>
        <item>	+40	</item>
        <item>	+41	</item>
        <item>	+43	</item>
        <item>	+44	</item>
        <item>	+45	</item>
        <item>	+46	</item>
        <item>	+47	</item>
        <item>	+48	</item>
        <item>	+49	</item>
        <item>	+51	</item>
        <item>	+52	</item>
        <item>	+53	</item>
        <item>	+54	</item>
        <item>	+55	</item>
        <item>	+56	</item>
        <!--  <item>	+57	</item>
          <item>	+58	</item>
          <item>	+60	</item>
          <item>	+61	</item>
          <item>	+62	</item>
          <item>	+63	</item>
          <item>	+64	</item>
          <item>	+65	</item>
          <item>	+66	</item>
          <item>	+81	</item>
          <item>	+82	</item>
          <item>	+84	</item>
          <item>	+86	</item>
          <item>	+90	</item>
          <item>	+91	</item>
          <item>	+92	</item>
          <item>	+93	</item>
          <item>	+94	</item>
          <item>	+95	</item>
          <item>	+98	</item>
          <item>	+211	</item>
          <item>	+212	</item>
          <item>	+213	</item>
          <item>	+216	</item>
          <item>	+218	</item>
          <item>	+220	</item>
          <item>	+221	</item>
          <item>	+222	</item>
          <item>	+223	</item>
          <item>	+224	</item>
          <item>	+225	</item>
          <item>	+226	</item>
          <item>	+227	</item>
          <item>	+228	</item>
          <item>	+229	</item>
          <item>	+230	</item>
          <item>	+231	</item>
          <item>	+232	</item>
          <item>	+233	</item>
          <item>	+234	</item>
          <item>	+235	</item>
          <item>	+236	</item>
          <item>	+237	</item>
          <item>	+238	</item>
          <item>	+239	</item>
          <item>	+240	</item>
          <item>	+241	</item>
          <item>	+242	</item>
          <item>	+243	</item>
          <item>	+244	</item>
          <item>	+245	</item>
          <item>	+246	</item>
          <item>	+247	</item>
          <item>	+248	</item>
          <item>	+249	</item>
          <item>	+250	</item>
          <item>	+251	</item>
          <item>	+252	</item>
          <item>	+253	</item>
          <item>	+254	</item>
          <item>	+255	</item>
          <item>	+256	</item>
          <item>	+257	</item>
          <item>	+258	</item>
          <item>	+260	</item>
          <item>	+261	</item>
          <item>	+262	</item>
          <item>	+263	</item>
          <item>	+264	</item>
          <item>	+265	</item>
          <item>	+266	</item>
          <item>	+267	</item>
          <item>	+268	</item>
          <item>	+269	</item>
          <item>	+269	</item>
          <item>	+290	</item>
          <item>	+291	</item>
          <item>	+297	</item>
          <item>	+298	</item>
          <item>	+299	</item>
          <item>	+350	</item>
          <item>	+351	</item>
          <item>	+352	</item>
          <item>	+353	</item>
          <item>	+354	</item>
          <item>	+355	</item>
          <item>	+356	</item>
          <item>	+357	</item>
          <item>	+358	</item>
          <item>	+359	</item>
          <item>	+370	</item>
          <item>	+371	</item>
          <item>	+372	</item>
          <item>	+373	</item>
          <item>	+374	</item>
          <item>	+375	</item>
          <item>	+376	</item>
          <item>	+377	</item>
          <item>	+378	</item>
          <item>	+379	</item>
          <item>	+380	</item>
          <item>	+381	</item>
          <item>	+382	</item>
          <item>	+383	</item>
          <item>	+385	</item>
          <item>	+386	</item>
          <item>	+387	</item>
          <item>	+389	</item>
          <item>	+420	</item>
          <item>	+421	</item>
          <item>	+423	</item>
          <item>	+500	</item>
          <item>	+501	</item>
          <item>	+502	</item>
          <item>	+503	</item>
          <item>	+504	</item>
          <item>	+505	</item>
          <item>	+506	</item>
          <item>	+507	</item>
          <item>	+508	</item>
          <item>	+509	</item>
          <item>	+590	</item>
          <item>	+591	</item>
          <item>	+592	</item>
          <item>	+593	</item>
          <item>	+594	</item>
          <item>	+595	</item>
          <item>	+596	</item>
          <item>	+597	</item>
          <item>	+598	</item>
          <item>	+599	</item>
          <item>	+670	</item>
          <item>	+671	</item>
          <item>	+672	</item>
          <item>	+672	</item>
          <item>	+672	</item>
          <item>	+672	</item>
          <item>	+673	</item>
          <item>	+674	</item>
          <item>	+675	</item>
          <item>	+676	</item>
          <item>	+677	</item>
          <item>	+678	</item>
          <item>	+679	</item>
          <item>	+680	</item>
          <item>	+681	</item>
          <item>	+682	</item>
          <item>	+683	</item>
          <item>	+685	</item>
          <item>	+686	</item>
          <item>	+687	</item>
          <item>	+688	</item>
          <item>	+689	</item>
          <item>	+690	</item>
          <item>	+691	</item>
          <item>	+692	</item>
          <item>	+850	</item>
          <item>	+852	</item>
          <item>	+853	</item>
          <item>	+855	</item>
          <item>	+856	</item>
          <item>	+880	</item>
          <item>	+886	</item>
          <item>	+960	</item>
          <item>	+961	</item>
          <item>	+962	</item>
          <item>	+963	</item>
          <item>	+964	</item>
          <item>	+965	</item>
          <item>	+966	</item>
          <item>	+967	</item>
          <item>	+968	</item>
          <item>	+970	</item>
          <item>	+971	</item>
          <item>	+972	</item>
          <item>	+973	</item>
          <item>	+974	</item>
          <item>	+975	</item>
          <item>	+976	</item>
          <item>	+977	</item>
          <item>	+992	</item>
          <item>	+993	</item>
          <item>	+994	</item>
          <item>	+995	</item>
          <item>	+996	</item>
          <item>	+998	</item>-->
    </string-array>

</resources>
